# openpup

./: .flutter-plugins-dependencies  .gitignore  BUILD_MACOS.md  README.md  pubspec.yaml  temp_patch.txt
.github/workflows/: build-macos-intel.yml
android/: gradle.properties
android/app/: build.gradle.kts
lib/: app.dart  main.dart
lib/bridge/: event_stream.dart  rust_bridge.dart
lib/config/: llm_config.dart
lib/i18n/: app_localizations.dart
lib/i18n/locales/: en.json  zh.json
lib/models/: channel_models.dart  chat_message.dart  conversation_models.dart  finance_models.dart  navigation_item.dart  pup_config.dart  role_definition.dart
lib/providers/: app_provider.dart  chat_provider.dart  finance_provider.dart  role_provider.dart  ui_provider.dart
lib/screens/channel/: channel_detail.dart  channel_list.dart  pack_channel.dart
lib/screens/chat/: chat_screen.dart  input_bar.dart
lib/screens/finance/: finance_shell.dart  orders_tab.dart  overview_tab.dart  pipeline_tab.dart  research_tab.dart
lib/screens/groups/: group_chat.dart  group_detail.dart  group_list.dart
lib/screens/onboarding/: onboarding_screen.dart
lib/services/: llm_service.dart
lib/theme/: app_theme.dart  dark_theme.dart  light_theme.dart
lib/utils/: format_helpers.dart  pup_visuals.dart
lib/widgets/: activity_indicator.dart  markdown_renderer.dart  message_bubble.dart  permission_overlay.dart  status_bar.dart
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: build.sh  dev.sh
test/: models_test.dart  providers_test.dart  theme_test.dart  widget_test.dart
(+18 files in other folders)
