[package]
name = "openpup-flutter-bridge"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "openpup_flutter_bridge"
crate-type = ["cdylib", "staticlib"]

[dependencies]
openpup-core = { path = "../../openpup-main/core" }
flutter_rust_bridge = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
parking_lot = "0.12"
once_cell = { version = "1", features = ["std"] }
